<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_view"
        android:icon="@drawable/ic_baseline_pageview_24"
        android:title="@string/title_view" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_baseline_music_video_24"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_baseline_cloud_24"
        android:title="@string/title_weather" />
    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/ic_baseline_watch_later_24"
        android:title="@string/title_watch" />
    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_baseline_games_24"
        android:title="@string/title_game" />

</menu>