<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_view">

    <fragment
        android:id="@+id/navigation_view"
        android:name="cn.edu.finaltest.ui.view.ViewFragment"
        android:label="@string/title_view"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="cn.edu.finaltest.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="cn.edu.finaltest.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_watch"
        android:name="cn.edu.finaltest.ui.watch.WatchFragment"
        android:label="@string/title_watch"
        tools:layout="@layout/watch_fragment" />
    <fragment
        android:id="@+id/navigation_game"
        android:name="cn.edu.finaltest.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/game_fragment" />
</navigation>